syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 1041
// EnetChannelId: 0
// EnetIsReliable: true
message AvatarUnlockTalentNotify {
	uint64 avatar_guid = 1;
	uint32 entity_id = 15;
	uint32 talent_id = 13;
	uint32 skill_depot_id = 14;
}
